jupyterhub/jupyterhub-imandra/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lockdown-singleuser-server-network
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: jupyterhub
      component: singleuser-server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: jupyterhub
          component: hub
    - podSelector:
        matchLabels:
          app: kube-lego
          component: proxy
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: jupyterhub
          component: hub
    - podSelector:
        matchLabels:
          app: kube-lego
          component: proxy
